third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/decode_with_mem_tracking_ui/trait_bound_not_satisfied.stderr
error[E0277]: the trait bound `Base: DecodeWithMemTracking` is not satisfied
 --> tests/decode_with_mem_tracking_ui/trait_bound_not_satisfied.rs:8:8
  |
8 |     base: Base,
  |           ^^^^ the trait `DecodeWithMemTracking` is not implemented for `Base`
  |
  = help: the following other types implement trait `DecodeWithMemTracking`:
            ()
            (TupleElement0, TupleElement1)
            (TupleElement0, TupleElement1, TupleElement2)
            (TupleElement0, TupleElement1, TupleElement2, TupleElement3)
            (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4)
            (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5)
            (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6)
            (TupleElement0, TupleElement1, TupleElement2, TupleElement3, TupleElement4, TupleElement5, TupleElement6, TupleElement7)
          and $N others
note: required by a bound in `check_field`
 --> tests/decode_with_mem_tracking_ui/trait_bound_not_satisfied.rs:6:18
  |
6 | #[derive(Decode, DecodeWithMemTracking)]
  |                  ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `check_field`
  = note: this error originates in the derive macro `DecodeWithMemTracking` (in Nightly builds, run with -Z macro-backtrace for more info)
