third_party/rust/chromium_crates_io/vendor/parity-scale-codec-v3/tests/decode_with_mem_tracking_ui/trait_bound_not_satisfied.rs
use parity_scale_codec::{Decode, DecodeWithMemTracking};

#[derive(Decode)]
struct Base {}

#[derive(Decode, DecodeWithMemTracking)]
struct Wrapper {
	base: Base,
}

fn main() {}
